all button ui in all pages

--- a/src/app/add-job-site/add-job-site.html
+++ b/src/app/add-job-site/add-job-site.html
@@ -60,7 +60,7 @@
 </div>
 <div class="row nomargin">
 	<div class="col-md-12 site-col">
-		<button class="btn btn-primary">Add Job Site</button>
-		<button class="btn btn-default">Cancel</button>
+		<button class="btn sign_mybtn all-btn primary-btn">Add Job Site</button>
+		<button class="btn sell-equ all-btn">Cancel</button>
 	</div>
 </div>
