--- a/src/app/change-password/change-password.html
+++ b/src/app/change-password/change-password.html
@@ -22,7 +22,7 @@
             <h4>Confirm Password</h4>
             <input type="password" placeholder="Confirm Password" class="form-control">
             <div class="submt-btn-div">
-              <input type="submit" type="submit" value="Update" class="btn btn-default update-btn">
+              <input type="submit" type="submit" value="Update" class="btn update-btn sign_mybtn all-btn primary-btn">
             </div>
           </form>
         </div>
