--- a/src/app/help/help.html
+++ b/src/app/help/help.html
@@ -37,6 +37,6 @@
                   </div>
                   <div class="col-md-12 col1"></div>
                   <div class="col-md-12 col4 help-request-btn">
-                    <button class="btn btn-primary pull-right all-btn">Request Further Information</button>
+                    <button class="btn pull-right all-btn primary-btn">Request Further Information</button>
                   </div>
                 </div>
