--- a/src/app/job-site-detail/job-site-detail.html
+++ b/src/app/job-site-detail/job-site-detail.html
@@ -1,6 +1,6 @@
 <div class="row job-header-row">
 	<div class="col-md-12 job-site-header">
-		<h4>Job Site Details<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o catelog-icon"></i></a></h4>
+		<h4>Job Site Details<a class="close-cross pull-right on-hover-pointer" ng-click="$dismiss()"><i class="fa fa-times-circle-o catelog-icon"></i></a></h4>
 	</div>
 </div>
 <div class="row nomargin">
@@ -56,6 +56,6 @@
 <hr class="bottommargin">
 <div class="row nomargin">
 	<div class="col-md-12 site-col">
-		<button class="btn job-btn" ng-click="$dismiss()">Close</button>
+		<button class="btn job-btn all-btn sell-equ" ng-click="$dismiss()">Close</button>
 	</div>
 </div>
