--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -278,7 +278,7 @@
             </div>
           </div>
           <div class="nav navbar-nav navbar-right landing-header" ng-if="!userObj">
-            <a type="button" class="btn btn-default get_soft get-free-acc" href="/#/register" >Get Free Account</a>
+            <a type="button" class="btn get_soft get-free-acc" href="/#/register" >Get Free Account</a>
           </div>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -641,7 +641,7 @@
             Address Line 3.<br>
             City, State.
           </p>
-          <button type="button" class="btn btn-default sell-equ foot-btn">Get Directions</button>
+          <button type="button" class="btn sell-equ foot-btn">Get Directions</button>
         </div>
         <!-- End Location -->
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
@@ -650,7 +650,7 @@
             Get news on our latest promotions, products and services. We'll never share your email address and you can opt out any time
           </p>
           <input type="text" placeholder="Enter Your Email Id" class="form-control news-input">
-          <button class="btn btn-default sell-equ foot-btn">Subscribe</button>
+          <button class="btn sell-equ foot-btn">Subscribe</button>
           <!-- <button type="button" class="btn btn-default sell-equ  foot-btn" ng-click="$state.go('hm.sellEquipment')">Sell Your Equipment</button> -->
         </div>
       </div>
