--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -5,7 +5,7 @@
       <div class="row">
         <!-- START  Dashboard tab -->
         <div class="col-sm-12 col-xs-12 filt-btn">
-          <button class="btn btn-default" ng-click="filterBtn()">My Catalog</button>
+          <button class="btn sell-equ all-btn" ng-click="filterBtn()">My Catalog</button>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side show-for-small" ng-class="{'show-filter': showFilter}">
           <ul class="nav nav-pills nav-stacked my-verti-tab">
@@ -89,7 +89,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
+                      <a ng-href="" type="button" class="btn my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
@@ -138,7 +138,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
+                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
@@ -187,7 +187,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
+                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
@@ -236,7 +236,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
+                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
@@ -285,7 +285,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
+                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
@@ -334,7 +334,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
+                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
