--- a/src/app/portal-access/portal-access.html
+++ b/src/app/portal-access/portal-access.html
@@ -72,7 +72,7 @@
               <input type="password" class="form-control"  autocomplete="off" ng-required="true" name="password" ng-model="loginData.password">
             </div>
             <div class="form-group">
-              <input type="submit" type="submit" ng-click="portalLogin()" value="Update" class="btn btn-default update-btn">
+              <input type="submit" type="submit" ng-click="portalLogin()" value="Update" class="btn sign_mybtn all-btn primary-btn">
             </div>
           </form>
         </div>
