--- a/src/app/request-callback/request-callback.html
+++ b/src/app/request-callback/request-callback.html
@@ -35,6 +35,6 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="requestCallback()">Call Me</button>
+    <button class="btn sign_mybtn all-btn primary-btn" ng-click="requestCallback()">Call Me</button>
   </div>
 </div>
