--- a/src/app/search/grid.html
+++ b/src/app/search/grid.html
@@ -40,7 +40,7 @@
 
         </li>
         <li>
-          <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
+          <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>
 
         </li>
         <li>
