--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -6,61 +6,6 @@
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
 	</div>
 	<div class="row">
-		<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<table class="table">
-				<thead>
-					<tr>
-						<th></th>
-						<th>Equipment</th>
-						<th>Quantity</th>
-						<th>Request Dates</th>
-						<th>Site Location</th>
-						<th>Sub-Total</th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>
-							<i class="fa fa-truck"></i>
-						</td>
-						<td>
-							<h3>Electric Equipment Wide-16 "</h3>
-							<input type="checkbox"><span>Allow Substitution?</span>
-							<ul>
-								<li>
-									<p class="daily_title">Daily</p>
-									<p class="daily_price">$199</p>
-								</li>
-								<li>
-									<p class="daily_title">Weekly</p>
-									<p class="daily_price">$1156</p>
-								</li>
-								<li>
-									<p class="daily_title">Monthly</p>
-									<p class="daily_price">$4556</p>
-								</li>
-							</ul>
-						</td>
-						<td>
-							<input type="text" value="1">
-						</td>
-						<td>
-							<p>12 Dec, 2015</p>
-							<p>to</p>
-							<p>14 Dec, 2015</p>
-						</td>
-						<td>
-							<i class="fa fa-map-marker"></i>
-							<span>Bay Area, Houstan</span>
-							<p><a href="">Update</a></p>
-						</td>
-						<td>#3556</td>
-						<td><i class="fa fa-trash"></i></td>
-					</tr>
-				</tbody>
-			</table>
-		</div> -->
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-col nopadding table-responsive">
 			<table class="table cart-table">
 				<thead>
@@ -198,7 +143,7 @@
 	<div class="row">
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 promo-code">
 			<input type="text" placeholder="Promo code" class="form-control">
-			<button class="btn btn-default sign_mybtn all-btn">Apply</button>
+			<button class="btn sign_mybtn all-btn primary-btn">Apply</button>
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 total-price">
 			<div class="total-price-div">
@@ -231,8 +176,8 @@
 			<button class="btn sell-equ all-btn">Continue Renting</button>
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 reserve-generate-btn">
-			<button class="btn sign_mybtn all-btn">Generate Quote</button>
-			<button class="btn sign_mybtn all-btn">Reserve Now</button>
+			<button class="btn sign_mybtn all-btn primary-btn">Generate Quote</button>
+			<button class="btn sign_mybtn all-btn primary-btn">Reserve Now</button>
 		</div>
 		</div>
 	</div>
