--- a/src/app/terms-and-conditions/terms-and-conditions-detail.html
+++ b/src/app/terms-and-conditions/terms-and-conditions-detail.html
@@ -48,8 +48,8 @@
 			</p>
       <p>
 
-        <a href="#/register?terms=true"class="btn btn-success">I Accept</a>
-        <a href="#/register" class="btn btn-default " style="margin-left: 10px;">Cancel</a>
+        <a href="#/register?terms=true"class="btn sign_mybtn all-btn primary-btn">I Accept</a>
+        <a href="#/register" class="btn sell-equ all-btn " style="margin-left: 10px;">Cancel</a>
       </p>
 		</div>
 	</div>
