--- a/src/app/terms-and-conditions/terms-and-conditions.html
+++ b/src/app/terms-and-conditions/terms-and-conditions.html
@@ -11,7 +11,7 @@
 	  	</p>
   </div>
   <div class="modal-footer">
-    <button class="btn" ng-click="$dismiss()">Cancel</button>
-    <button class="btn btn-primary" ng-click="$dismiss()">I accept</button>
+    <button class="btn sell-equ all-btn" ng-click="$dismiss()">Cancel</button>
+    <button class="btn sign_mybtn all-btn primary-btn" ng-click="$dismiss()">I Accept</button>
   </div>
 </div>
