--- a/src/app/equipment-detail/equipment-detail.html
+++ b/src/app/equipment-detail/equipment-detail.html
@@ -81,16 +81,16 @@
         </div>
         <!--                        <div class="req_dash_botam col-lg-12 ten_botam"></div>-->
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-center ten_top_botam add-wish-btn">
-          <button class="btn btn-default now-reserve col-lg-12" type="button">
+          <button class="btn now-reserve col-lg-12 all-btn sell-equ" type="button">
             <span ng-if="!equipment.addedToWishlist">Add to Wishlist</span>
             <span ng-if="equipment.addedToWishlist">Added to Wishlist</span>
           </button>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-center ten_top_botam">
-          <a class="btn btn-default now-reserve col-lg-12" type="button" ui-sref="hm.reserveEquipment({id: equipment.Product_Id})">Reserve Now</a>
+          <a class="btn now-reserve col-lg-12 all-btn" type="button" ui-sref="hm.reserveEquipment({id: equipment.Product_Id})">Reserve Now</a>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center ten_top_botam">
-          <button class="btn btn-default col-lg-12 col-md-12 col-sm-12 inq_btn" type="button">Inquire for Multiple Equipments Rentals</button>
+          <button class="btn col-lg-12 col-md-12 col-sm-12 inq_btn primary-btn all-btn" type="button">Inquire for Multiple Equipments Rentals</button>
 
 
         </div>
