--- a/src/app/search/list.html
+++ b/src/app/search/list.html
@@ -63,8 +63,8 @@
 
     </div>
     <div class="col-md-3 right-btn-col">
-      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
-      <button type="button" class="btn btn-default add-list all-btn" ng-click="addToOrRemoveFromWishList(item)">
+      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn all-btn my-reserve" ng-class="{'my-reserve-added': !Is_in_catelog}">Reserve</a>
+      <button type="button" class="btn add-list all-btn sell-equ" ng-click="addToOrRemoveFromWishList(item)">
         <span btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id">{{item.Is_in_catelog ? 'Added to Wishlist': 'Add to Wishlist'}}</span>
       </button>
     </div>
