--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="col-md-12 filt-btn">
-          <button class="btn btn-default" ng-click="filterBtn()">Filter</button>
+          <button class="btn sell-equ all-btn" ng-click="filterBtn()">Filter</button>
         </div>
         <!-- End Filter Results side -->
         <!-- START  All Product side -->
