--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -251,7 +251,7 @@
     width: 100%;
     background-color: #fff;
     z-index: 100;
-    margin-top: 35px;
+    margin-top: 45px;
   }
 
   .search-res-figure {
@@ -701,6 +701,18 @@
 
   .job-ste-box-small ul li {
     max-width: 320px;
+  }
+
+  .manage-job-btn-col .map {
+    border-radius: 0;
+  }
+
+  .manage-job-btn-col .list {
+    border-radius: 0;
+  }
+
+  .map-view-btn {
+    min-width: 127px;
   }
 }
 
