--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -53,7 +53,7 @@
 						<td class="area vertically-middle">
 							<i class="fa fa-map-marker"></i>
 							<span>Bay Area, Houstan</span>
-							<p><a href="">Update</a></p>
+							<p><a href="#/update-job-site">Update</a></p>
 						</td>
 						<td class="vertically-middle pricing">$3556</td>
 						<td class="vertically-middle"><i class="fa fa-trash fa-2x"></i></td>
@@ -92,7 +92,7 @@
 						<td class="area vertically-middle">
 							<i class="fa fa-map-marker"></i>
 							<span>Bay Area, Houstan</span>
-							<p><a href="">Update</a></p>
+							<p><a href="#/update-job-site">Update</a></p>
 						</td>
 						<td class="vertically-middle pricing">$3556</td>
 						<td class="vertically-middle"><i class="fa fa-trash fa-2x"></i></td>
@@ -131,7 +131,7 @@
 						<td class="area vertically-middle">
 							<i class="fa fa-map-marker"></i>
 							<span>Bay Area, Houstan</span>
-							<p><a href="">Update</a></p>
+							<p><a href="#/update-job-site">Update</a></p>
 						</td>
 						<td class="vertically-middle pricing">$3556</td>
 						<td class="vertically-middle"><i class="fa fa-trash fa-2x"></i></td>
