add new job site page update jobsite responsive and toggling tab

--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -1578,6 +1578,16 @@ button:hover {
   border-top: 1px solid #ddd;
 }
 
+.update-exist {
+  display: none;
+  transition: display .15s linear;
+}
+
+.update-exist.in {
+  display: block;
+  transition: display .15s linear;
+}
+
 
 
 
