--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -33,20 +33,20 @@
             </li> -->
           </ul>
         </div>
-        <div class="btn-group drop-btn profile-dropdown user-div" dropdown >
+        <div class="btn-group drop-btn profile-dropdown user-div" dropdown ng-if="userObj">
           <button class="btn btn-mini my-alc-btn nopadding prof-btn"><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}</button>
           <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn" id="single-button" dropdown-toggle>
             <span class="caret"></span>
           </button>
-          <ul class="dropdown-menu"  role="menu" ng-if="userObj">
+          <ul class="dropdown-menu"  role="menu">
             <li role="presentation"><a role="menuitem" ui-sref="hm.userProfile" tabindex="-1" href="/#/profile">Profile</a></li>
             <li role="presentation"><a role="menuitem" tabindex="-1" href="/#/portal-access" ng-if="!userObj.portal_login">Get Portal Access</a></li>
             <li role="presentation"><a role="menuitem" tabindex="-1" href="/#/logout">Logout</a></li>
           </ul>
-          <ul class="dropdown-menu"  role="menu" ng-if="!userObj">
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="/#/login">Login</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="/#/register">Register</a></li>
-          </ul>
+        </div>
+        <div ng-if="!userObj" class="not-user-div">
+          <a href="#/login" class="help-link">Login</a>
+          <a href="#/register" class="help-link">Register</a>
         </div>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 nopadding">
