--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -6,7 +6,7 @@
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
 	</div>
 	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-col nopadding table-responsive">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-col nopadding table-responsive hidden-sm hidden-xs">
 			<table class="table cart-table">
 				<thead>
 					<tr>
@@ -138,6 +138,59 @@
 					</tr>
 				</tbody>
 			</table>
+		</div>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-col nopadding hidden-lg hidden-md">
+			<div class="cart-for-mobile">
+				<div class="cart-image-div">
+					<i class="fa fa-truck fa-4x"></i>
+				</div>
+				<div class="equipment-desc">
+					<h3>Electric Equipment Wide-16 "</h3>
+					<input type="checkbox" style="margin: 3px 0 0 0;"><span>Allow Substitution?</span>
+					<p class="qty-head">Quantity</p>
+					<input class="form-control" type="text" value="1">
+					<i class="fa fa-map-marker"></i>
+					<span>Bay Area, Houstan</span>
+					<span class="pull-right"><a href="#/update-job-site">Update</a></span>
+					<p class="sub-total">Sub-Total: &nbsp $3556
+						<span class="pull-right"><a href="">Delete</a></span>
+					</p>
+				</div>
+			</div>
+			<div class="cart-for-mobile">
+				<div class="cart-image-div">
+					<i class="fa fa-truck fa-4x"></i>
+				</div>
+				<div class="equipment-desc">
+					<h3>Electric Equipment Wide-16 "</h3>
+					<input type="checkbox" style="margin: 3px 0 0 0;"><span>Allow Substitution?</span>
+					<p class="qty-head">Quantity</p>
+					<input class="form-control" type="text" value="1">
+					<i class="fa fa-map-marker"></i>
+					<span>Bay Area, Houstan</span>
+					<span class="pull-right"><a href="#/update-job-site">Update</a></span>
+					<p class="sub-total">Sub-Total: &nbsp $3556
+						<span class="pull-right"><a href="">Delete</a></span>
+					</p>
+				</div>
+			</div>
+			<div class="cart-for-mobile">
+				<div class="cart-image-div">
+					<i class="fa fa-truck fa-4x"></i>
+				</div>
+				<div class="equipment-desc">
+					<h3>Electric Equipment Wide-16 "</h3>
+					<input type="checkbox" style="margin: 3px 0 0 0;"><span>Allow Substitution?</span>
+					<p class="qty-head">Quantity</p>
+					<input class="form-control" type="text" value="1">
+					<i class="fa fa-map-marker"></i>
+					<span>Bay Area, Houstan</span>
+					<span class="pull-right"><a href="#/update-job-site">Update</a></span>
+					<p class="sub-total">Sub-Total: &nbsp $3556
+						<span class="pull-right"><a href="">Delete</a></span>
+					</p>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="row">
