--- a/src/app/update-job-site/update-job-site.html
+++ b/src/app/update-job-site/update-job-site.html
@@ -145,7 +145,7 @@
 		<div class="row nomargin">
 			<div class="col-md-12 site-col">
 				<button class="btn sign_mybtn all-btn primary-btn">Add Job Site</button>
-				<button class="btn sell-equ all-btn">Cancel</button>
+				<button class="btn sell-equ all-btn" ng-click="$dismiss()">Cancel</button>
 			</div>
 		</div>
 	</div>
