--- a/src/app/request-callback/request-callback.html
+++ b/src/app/request-callback/request-callback.html
@@ -17,14 +17,17 @@
       </div>
       <div class="form-group">
         <div class="row">
-          <div class="col-md-8 padding-right-0">
+          <div class="col-md-8 padding-right-0 req-call-num">
             <div class="input-group">
               <span class="input-group-addon"><span class="glyphicon glyphicon-earphone"></span></span>
               <input type="phone" name="p1" id="p1" class="form-control col-xs-12 col-sm-6 col-md-8" ng-model="phone" ui-mask="999-999-9999" >
             </div>
           </div>
-          <div class="col-md-4 padding-left-2">
-            <input type="phone" name="p2" size="5" id="p2" class="form-control col-xs-6 col-md-4" ui-mask="9999" ng-model="extension"/>
+          <div class="col-md-4 padding-left-2 req-call-num">
+            <div class="input-group">
+              <span class="input-group-addon"><span class="glyphicon glyphicon-earphone"></span></span>
+              <input type="phone" name="p2" size="5" id="p2" class="form-control col-xs-6 col-md-4" ui-mask="9999" ng-model="extension"/>
+            </div>
           </div>
         </div>
       </div>
