header fixed on top

--- a/src/app/activate-user/activate-user.html
+++ b/src/app/activate-user/activate-user.html
@@ -1,4 +1,4 @@
-<section>
+<section class="content-top">
 
   <div class="activate-user-div" ng-if="flags.activationInProgress">
     <h4>Please wait while we make your account active...</h4>
