--- a/src/app/equipment-sell/equipment-sell.html
+++ b/src/app/equipment-sell/equipment-sell.html
@@ -6,7 +6,7 @@
      <!--ngf-drag-over-class="dragover" ngf-multiple="true" ngf-allow-dir="true"-->
      <!--ngf-accept="'image/*,application/pdf'">Drop Images or PDFs files here</div>-->
 <!--<img ngf-src="files[0]" ngf-default-src="assets/images/yeoman.png" ngf-accept="'image/*'">-->
-<section>
+<section class="content-top">
   <!-- START  Main Content -->
   <article class="main-cantain">
     <div class="container">
