--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -21,7 +21,7 @@
         <div class="cart_menu">
           <ul>
             <li>
-              <a href="#">
+              <a href="#/shopping-cart">
                 <i class="fa fa-shopping-cart fa-2x"></i></a>
               <span class="cart_noti">1</span>
             </li>
@@ -70,7 +70,7 @@
         <div class="cart_menu">
           <ul>
             <li>
-              <a href="#">
+              <a href="#/shopping-cart">
                 <i class="fa fa-shopping-cart fa-2x"></i></a>
               <span class="cart_noti">1</span>
             </li>
