--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -1,4 +1,4 @@
-<section>
+<section class="content-top">
   <!-- START  Main Content -->
   <article class="main-cantain">
     <div class="container">
