--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -1,4 +1,4 @@
-<section>
+<section class="content-top">
   <!-- START  Main Content -->
   <article class="main-cantain search-main-contain">
     <div class="container">
