--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container content-top">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 my-bottm-line manage_job_tit manage_job_tit_small shopping-cart-heading">
 			Shopping Cart
