--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -1,4 +1,4 @@
-<section>
+<section class="content-top">
   <div class="portal-access-header">
     <div class="container">
       <div class="row">
