--- a/src/app/search/list.html
+++ b/src/app/search/list.html
@@ -1,6 +1,6 @@
 <div class="row nomargin">
   <!-- <div class="col-md-12" ng-if="results.length"><hr class="dash"></div> -->
-  <div class="col-md-12 col-sm-6 col-xs-12 list-product" ng-repeat="item in results">
+  <div class="col-md-12 col-sm-6 col-xs-12 list-product" ng-repeat="item in results track by $index">
     <div class="col-md-3 lift-list">
       <figure class="search-res-figure">
         <a ng-href="/#/equipments/{{item.Product_Id}}"> <img ng-src="{{item.Product_Image[0].ProductImage_Path}}" class="search-res-img"></a>
