--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -50,7 +50,8 @@
 
       <div class="row no-search-row" ng-if="userQuery">
         <div class="col-md-12 text-col">
-          <p class="no-search-desc">Sorry, no result found for "{{params.query}}". Let us help you out. Tell us what do need? We will get back to you.</p>
+          <p class="no-search-desc">
+            <span>Sorry, no result found for "{{params.query}}"</span>. Let us help you out. Tell us what do need? We will get back to you.</p>
         </div>
         <div class="col-md-12 col1">
           <p>Let us help you out</p>
