search result changes

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -67,7 +67,7 @@
       </div>
       <!-- END  Search box -->
       <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 my_alc hide-header-navbar nopadding header-prof-part">
-        <div class="cart_menu">
+        <div class="cart_menu" ng-if="userObj">
           <ul>
             <li>
               <a href="#/shopping-cart">
