--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -28,7 +28,7 @@
                           {{attribute.Attribute_name}}
                         </div>
                         <div class="checkbox filter_cat_tex1" ng-repeat="value in attribute.value">
-                          <label><input type="checkbox" name="selectedAtrributes[]" value="{{value.attribute_value_name}}" ng-checked="selectedAttributes.indexOf(value.attribute_value_name) > -1" ng-click="selectCategoryAttributes(attribute.Attribute_name,value.attribute_value_name)"><span class="cat_mar">{{value.attribute_value_name}}</span></label>
+                          <label><input type="checkbox" name="selectedAtrributes[]" value="{{value.attribute_value_name}}" ng-checked="selectedAttributes.indexOf(value.attribute_value_name) > -1" ng-click="selectCategoryAttributes($event,attribute.Attribute_slug,value.attribute_value_name)"><span class="cat_mar">{{value.attribute_value_name}}</span></label>
                         </div>
                       </li>
                     </ul>
