--- a/src/app/dashboard-main/dashboard-main.html
+++ b/src/app/dashboard-main/dashboard-main.html
@@ -4,7 +4,7 @@
     <div id="dash" class="tab-pane fade in active">
 
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit manage_job_tit_small">
-        Manage Job Sites
+        DASHBOARD
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit manage_job_tit_small">
         <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span>
