--- a/src/app/update-job-site/update-job-site.html
+++ b/src/app/update-job-site/update-job-site.html
@@ -1,6 +1,6 @@
 <div class="row no-search-row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col1 help-heading-col">
-		<p>Update Job Site<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o on-hover-pointer catelog-icon"></i></a></p>
+		<p>Update Job Site<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times marker on-hover-pointer catelog-icon"></i></a></p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<ul class="nav nav-tabs gride-tab root-category">
@@ -72,10 +72,10 @@
 			<p>Houstan - TX</p>
 			<p class="zip">Zip Code: 34001</p>
 			<i class="fa fa-phone-square zip marker"></i>
-			<span>+1 657 657 5678</span>
+			<span class="marker">+1 657 657 5678</span>
 			<br>
 			<i class="fa fa-user marker"></i>
-			<span>
+			<span class="marker">
 				Name of Contact Person
 			</span>
 		</div>
