--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -26,7 +26,7 @@
 						</td>
 						<td class="equipment-desc">
 							<h3>Electric Equipment Wide-16 "</h3>
-							<input type="checkbox" style="margin: 3px 0 0 0;"><span>Allow Substitution?</span>
+							<input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
 							<ul class="price-ul">
 								<li>
 									<p class="daily_title">Daily</p>
@@ -56,7 +56,7 @@
 							<p><a href="#/update-job-site">Update</a></p>
 						</td>
 						<td class="vertically-middle pricing">$3556</td>
-						<td class="vertically-middle"><i class="fa fa-trash fa-2x"></i></td>
+						<td class="vertically-middle delete-icon"><i class="fa fa-trash fa-2x"></i></td>
 					</tr>
 
 					<tr>
@@ -65,7 +65,7 @@
 						</td>
 						<td class="equipment-desc">
 							<h3>Electric Equipment Wide-16 "</h3>
-							<input type="checkbox" style="margin: 3px 0 0 0;"><span>Allow Substitution?</span>
+							<input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
 							<ul class="price-ul">
 								<li>
 									<p class="daily_title">Daily</p>
@@ -95,7 +95,7 @@
 							<p><a href="#/update-job-site">Update</a></p>
 						</td>
 						<td class="vertically-middle pricing">$3556</td>
-						<td class="vertically-middle"><i class="fa fa-trash fa-2x"></i></td>
+						<td class="vertically-middle delete-icon"><i class="fa fa-trash fa-2x"></i></td>
 					</tr>
 
 					<tr>
@@ -104,7 +104,7 @@
 						</td>
 						<td class="equipment-desc">
 							<h3>Electric Equipment Wide-16 "</h3>
-							<input type="checkbox" style="margin: 3px 0 0 0;"><span>Allow Substitution?</span>
+							<input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
 							<ul class="price-ul">
 								<li>
 									<p class="daily_title">Daily</p>
@@ -134,7 +134,7 @@
 							<p><a href="#/update-job-site">Update</a></p>
 						</td>
 						<td class="vertically-middle pricing">$3556</td>
-						<td class="vertically-middle"><i class="fa fa-trash fa-2x"></i></td>
+						<td class="vertically-middle delete-icon delete-icon"><i class="fa fa-trash fa-2x"></i></td>
 					</tr>
 				</tbody>
 			</table>
@@ -146,7 +146,7 @@
 				</div>
 				<div class="equipment-desc">
 					<h3>Electric Equipment Wide-16 "</h3>
-					<input type="checkbox" style="margin: 3px 0 0 0;"><span>Allow Substitution?</span>
+					<input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
 					<p class="qty-head">Quantity</p>
 					<input class="form-control" type="text" value="1">
 					<i class="fa fa-map-marker"></i>
@@ -163,7 +163,7 @@
 				</div>
 				<div class="equipment-desc">
 					<h3>Electric Equipment Wide-16 "</h3>
-					<input type="checkbox" style="margin: 3px 0 0 0;"><span>Allow Substitution?</span>
+					<input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
 					<p class="qty-head">Quantity</p>
 					<input class="form-control" type="text" value="1">
 					<i class="fa fa-map-marker"></i>
@@ -180,7 +180,7 @@
 				</div>
 				<div class="equipment-desc">
 					<h3>Electric Equipment Wide-16 "</h3>
-					<input type="checkbox" style="margin: 3px 0 0 0;"><span>Allow Substitution?</span>
+					<input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
 					<p class="qty-head">Quantity</p>
 					<input class="form-control" type="text" value="1">
 					<i class="fa fa-map-marker"></i>
