--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -56,7 +56,7 @@
 							<p><a href="#/update-job-site">Update</a></p>
 						</td>
 						<td class="vertically-middle pricing">$3556</td>
-						<td class="vertically-middle delete-icon"><i class="fa fa-trash fa-2x"></i></td>
+						<td class="vertically-middle delete-icon on-hover-pointer"><i class="fa fa-trash fa-2x"></i></td>
 					</tr>
 
 					<tr>
@@ -95,7 +95,7 @@
 							<p><a href="#/update-job-site">Update</a></p>
 						</td>
 						<td class="vertically-middle pricing">$3556</td>
-						<td class="vertically-middle delete-icon"><i class="fa fa-trash fa-2x"></i></td>
+						<td class="vertically-middle delete-icon on-hover-pointer"><i class="fa fa-trash fa-2x"></i></td>
 					</tr>
 
 					<tr>
