close button on modal update job site page

--- a/src/app/add-job-site/add-job-site.html
+++ b/src/app/add-job-site/add-job-site.html
@@ -1,6 +1,6 @@
 <div class="row job-header-row">
 	<div class="col-md-12 job-site-header">
-		<h4>Add New Job Site Address<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o catelog-icon"></i></a></h4>
+		<h4>Add New Job Site Address<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times marker on-hover-pointer"></i></a></h4>
 	</div>
 </div>
 <div class="row fields-row">
@@ -12,7 +12,7 @@
     <input type="text" placeholder="City" class="form-control" ng-model="address.route">
 	</div>
 	<div class="col-md-6 other-col">
-		<input type="text" placeholder="City" class="form-control" ng-model="address.locality">
+		<input type="text" placeholder="Address" class="form-control" ng-model="address.locality">
 	</div>
 	<div class="col-md-6 other-col">
 		<input type="text" placeholder="State" class="form-control" ng-model="address.administrative_area_level_1">
