--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -51,7 +51,7 @@
 							<p>14 Dec, 2015</p>
 						</td>
 						<td class="area vertically-middle">
-							<i class="fa fa-map-marker"></i>
+							<i class="fa fa-map-marker marker"></i>
 							<span>Bay Area, Houstan</span>
 							<p><a href="#/update-job-site">Update</a></p>
 						</td>
@@ -90,7 +90,7 @@
 							<p>14 Dec, 2015</p>
 						</td>
 						<td class="area vertically-middle">
-							<i class="fa fa-map-marker"></i>
+							<i class="fa fa-map-marker marker"></i>
 							<span>Bay Area, Houstan</span>
 							<p><a href="#/update-job-site">Update</a></p>
 						</td>
@@ -129,7 +129,7 @@
 							<p>14 Dec, 2015</p>
 						</td>
 						<td class="area vertically-middle">
-							<i class="fa fa-map-marker"></i>
+							<i class="fa fa-map-marker marker"></i>
 							<span>Bay Area, Houstan</span>
 							<p><a href="#/update-job-site">Update</a></p>
 						</td>
@@ -149,7 +149,7 @@
 					<input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
 					<p class="qty-head">Quantity</p>
 					<input class="form-control" type="text" value="1">
-					<i class="fa fa-map-marker"></i>
+					<i class="fa fa-map-marker marker"></i>
 					<span>Bay Area, Houstan</span>
 					<span class="pull-right"><a href="#/update-job-site">Update</a></span>
 					<p class="sub-total">Sub-Total: &nbsp $3556
@@ -166,7 +166,7 @@
 					<input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
 					<p class="qty-head">Quantity</p>
 					<input class="form-control" type="text" value="1">
-					<i class="fa fa-map-marker"></i>
+					<i class="fa fa-map-marker marker"></i>
 					<span>Bay Area, Houstan</span>
 					<span class="pull-right"><a href="#/update-job-site">Update</a></span>
 					<p class="sub-total">Sub-Total: &nbsp $3556
@@ -183,7 +183,7 @@
 					<input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
 					<p class="qty-head">Quantity</p>
 					<input class="form-control" type="text" value="1">
-					<i class="fa fa-map-marker"></i>
+					<i class="fa fa-map-marker marker"></i>
 					<span>Bay Area, Houstan</span>
 					<span class="pull-right"><a href="#/update-job-site">Update</a></span>
 					<p class="sub-total">Sub-Total: &nbsp $3556
