--- a/src/app/terms-and-conditions/terms-and-conditions.html
+++ b/src/app/terms-and-conditions/terms-and-conditions.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
   <div class="modal-header">
-    <h3 class="modal-title">Terms and Conditions<a class="close-cross" ng-click="$dismiss()"><i class="fa fa-times"></i></a></h3>
+    <h3 class="modal-title">Terms and Conditions<a class="close-cross" ng-click="$dismiss()"><i class="fa fa-times marker on-hover-pointer"></i></a></h3>
 
   </div>
   <div class="modal-body">
