--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -1,7 +1,6 @@
 <div class="modal-content prof-btn">
   <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" ng-click="$dismiss()">×</button>
-    <h4 class="modal-title">Reserve this Equipment</h4>
+    <h4 class="modal-title">Reserve this Equipment<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times marker on-hover-pointer"></i></a></h4>
   </div>
   <div class="modal-body order-history-modal" style="min-height: 300px">
     <load-indicator loading="!product"></load-indicator>
