--- a/src/app/help/help.html
+++ b/src/app/help/help.html
@@ -1,6 +1,6 @@
                 <div class="row no-search-row">
                   <div class="col-md-12 col1 help-heading-col">
-                      <p>Let us help you out<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o on-hover-pointer catelog-icon"></i></a></p>
+                      <p>Let us help you out<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times marker on-hover-pointer"></i></a></p>
                   </div>
                   <div class="col-md-12 col2">
                     <p>What do you need?</p>
